--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
+    "react-tilt": "^1.0.2",
     "react-typed": "^2.0.12",
     "typed.js": "^2.1.0"
   },
